# STT-dashboard

./: .gitignore  BUGS_FIXED.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_QUICK_GUIDE.md  FIX_DEPLOYMENT_ERROR.md  IMPLEMENTATION_SUMMARY.md  METRICS_ROADMAP.md  PROGRESS.md  PROJECT_STATUS.md  PROJECT_TREE.txt  QUICKSTART.md  README.md  README_GITHUB.md  START_HERE.md  STREAMLIT_DEPLOYMENT_CHECKLIST.md  TESTING.md  check_columns.py  debug_timeline.py  deploy_to_github.bat  oneclick.bat  pyproject.toml  pytest.ini  requirements.txt  requirements_streamlit.txt  setup.py  streamlit_app.py  test_detect.py  test_ingest.py  test_read.py  verify_metrics.py
.streamlit/: config.toml
config/: default.yml  speakers.yml
docs/: ARCHITECTURE.md  METRICS_REFERENCE.md
stta/: __init__.py  cli.py
stta/dashboard/: alerts.py  app.py  components.py  demo_data.py  leaderboard.py  pdf_export.py
stta/io/: __init__.py  reader.py  writer.py
stta/metrics/: call_level.py  interaction_patterns.py  quality.py  registry.py  speaker_level.py  text_analysis.py  timeline.py
stta/report/: __init__.py  pdf.py
stta/schemas/: calls.py  utterances.py
stta/utils/: logging.py  text.py  timecode.py  validation.py
tests/: __init__.py  test_text.py  test_timecode.py  test_timeline.py
tests/data/: sample_call.csv  sample_call_with_overlap.csv
